--- a/index.html
+++ b/index.html
@@ -273,14 +273,13 @@
               <tr>
                   <td rowspan="2" class="text-center">Super Early Bird</td> <!-- Merge the "Super Early Bird" label for 2 rows and center it -->
                   <td>All Access Pass</td>
-                  <td>14 October - 25 October 2024</td>
+                  <td rowspan="2" class="text-center">4 October - 25 October 2024</td>
                   <td>Rp75,000</td>
                   <td>50</td>
                   <td><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Super Early Bird tickets">Register</a></td>
               </tr>
               <tr>
                   <td>Conference Pass</td>
-                  <td>14 October - 25 October 2024</td>
                   <td>Rp50,000</td>
                   <td>50</td>
                   <td><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Super Early Bird tickets">Register</a></td>
