--- a/index.html
+++ b/index.html
@@ -276,13 +276,12 @@
                   <td rowspan="2" class="text-center">4 October - 25 October 2024</td>
                   <td>Rp75,000</td>
                   <td>50</td>
-                  <td><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Super Early Bird tickets">Register</a></td>
+                  <td rowspan="2" class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Super Early Bird tickets">Register</a></td>
               </tr>
               <tr>
                   <td>Conference Pass</td>
                   <td>Rp50,000</td>
                   <td>50</td>
-                  <td><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Super Early Bird tickets">Register</a></td>
               </tr>
               <!-- Merged rows for Early Bird -->
               <tr>
