--- a/index.html
+++ b/index.html
@@ -276,21 +276,22 @@
                   <td rowspan="2" class="text-center">4 October - 25 October 2024</td>
                   <td>Rp75,000</td>
                   <td>50</td>
-                  <td rowspan="2" class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Super Early Bird tickets">Register</a></td>
+                  <td>Sold Out</a></td>
               </tr>
               <tr>
-                  <td>Conference Pass</td>
+                  <td class="text-center">Conference Pass</td>
                   <td>Rp50,000</td>
-                  <td>50</td>
+                  <td class="text-center">50</td>
+                  <td class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Super Early Bird tickets">Register</a></td>
               </tr>
               <!-- Merged rows for Early Bird -->
               <tr>
                   <td rowspan="2" class="text-center">Early Bird</td> <!-- Merge the "Early Bird" label for 2 rows and center it -->
-                  <td>All Access Pass</td>
-                  <td>-</td>
-                  <td>Rp100,000</td>
-                  <td>100</td>
-                  <td>Coming Soon</td>
+                  <td class="text-center">All Access Pass</td>
+                  <td class="text-center">-</td>
+                  <td class="text-center">Rp100,000</td>
+                  <td class="text-center">100</td>
+                  <td class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Early Bird tickets">Register</td>
               </tr>
               <tr>
                   <td>Conference Pass</td>
