--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
               <tr>
                   <td rowspan="2" class="text-center">Early Bird</td> <!-- Merge the "Early Bird" label for 2 rows and center it -->
                   <td class="text-center">All Access Pass</td>
-                  <td class="text-center">-</td>
+                  <td class="text-center">16 October - 08 November 2024</td>
                   <td class="text-center">Rp100,000</td>
                   <td class="text-center">100</td>
                   <td class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Early Bird tickets">Register</td>
