--- a/index.html
+++ b/index.html
@@ -255,78 +255,71 @@
           <p><span class="description-title">Registration</span></p>
       </div><!-- End Section Title -->
 
-    <!-- Ticket Categories -->
-    <div class="container ticket-categories" data-aos="fade-up">
-      <table class="table">
-          <thead>
-              <tr>
-                  <th></th>
-                  <th>Pass Type</th>
-                  <th>Period</th>
-                  <th>Price</th>
-                  <th>Availability</th>
-                  <th>Action</th> <!-- Added Action Column -->
-              </tr>
-          </thead>
-          <tbody>
-              <!-- Merged rows for Super Early Bird -->
-              <tr>
-                  <td rowspan="2" class="text-center">Super Early Bird</td> <!-- Merge the "Super Early Bird" label for 2 rows and center it -->
-                  <td>All Access Pass</td>
-                  <td rowspan="2" class="text-center">4 October - 25 October 2024</td>
-                  <td>Rp75,000</td>
-                  <td>50</td>
-                  <td>Sold Out</a></td>
-              </tr>
-              <tr>
-                  <td class="text-center">Conference Pass</td>
-                  <td>Rp50,000</td>
-                  <td class="text-center">50</td>
-                  <td class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Super Early Bird tickets">Register</a></td>
-              </tr>
-              <!-- Merged rows for Early Bird -->
-              <tr>
-                  <td rowspan="2" class="text-center">Early Bird</td> <!-- Merge the "Early Bird" label for 2 rows and center it -->
-                  <td class="text-center">All Access Pass</td>
-                  <td class="text-center">16 October - 08 November 2024</td>
-                  <td class="text-center">Rp100,000</td>
-                  <td class="text-center">100</td>
-                  <td class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Early Bird tickets">Register</td>
-              </tr>
-              <tr>
-                  <td>Conference Pass</td>
-                  <td>-</td>
-                  <td>Rp75,000</td>
-                  <td>50</td>
-                  <td>Coming Soon</td>
-              </tr>
-              <!-- Merged rows for Normal -->
-              <tr>
-                  <td rowspan="2" class="text-center">Normal</td> <!-- Merge the "Normal" label for 2 rows and center it -->
-                  <td>All Access Pass</td>
-                  <td>-</td>
-                  <td>Rp150,000</td>
-                  <td>100</td>
-                  <td>Coming Soon</td>
-              </tr>
-              <tr>
-                  <td>Conference Pass</td>
-                  <td>-</td>
-                  <td>Rp100,000</td>
-                  <td>50</td>
-                  <td>Coming Soon</td>
-              </tr>
-          </tbody>
-      </table>
-      <p class="note">* Limited availability. If tickets sell out before the end date, the next category will open automatically after. </p><br>
-    </div><!-- End Ticket Categories -->
-
-    <style>
-      .text-center {
-          text-align: center; /* Centers the text in the merged columns */
-          vertical-align: middle; /* Vertically centers the text across rows */
-      }
-    </style>
+      <!-- Ticket Categories -->
+      <div class="container ticket-categories" data-aos="fade-up">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Pass Type</th>
+                    <th>Period</th>
+                    <th>Price</th>
+                    <th>Availability</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Super Early Bird -->
+                <tr>
+                    <td rowspan="2" class="text-center">Super Early Bird</td>
+                    <td class="text-center">All Access Pass</td>
+                    <td rowspan="2" class="text-center">4 October - 25 October 2024</td>
+                    <td>Rp75,000</td>
+                    <td>50</td>
+                    <td>Sold Out</a></td>
+                </tr>
+                <tr>
+                    <td class="text-center">Conference Pass</td>
+                    <td>Rp50,000</td>
+                    <td class="text-center">50</td>
+                    <td class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Super Early Bird tickets">Register</a></td>
+                </tr>
+                <!-- Early Bird -->
+                <tr>
+                    <td rowspan="2" class="text-center">Early Bird</td>
+                    <td class="text-center">All Access Pass</td>
+                    <td class="text-center">16 October - 08 November 2024</td>
+                    <td class="text-center">Rp100,000</td>
+                    <td class="text-center">100</td>
+                    <td class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Early Bird tickets">Register</td>
+                </tr>
+                <tr>
+                    <td>Conference Pass</td>
+                    <td>-</td>
+                    <td>Rp75,000</td>
+                    <td>50</td>
+                    <td>Coming Soon</td>
+                </tr>
+                <!-- Normal -->
+                <tr>
+                    <td rowspan="2" class="text-center">Normal</td>
+                    <td>All Access Pass</td>
+                    <td>-</td>
+                    <td>Rp150,000</td>
+                    <td>100</td>
+                    <td>Coming Soon</td>
+                </tr>
+                <tr>
+                    <td>Conference Pass</td>
+                    <td>-</td>
+                    <td>Rp100,000</td>
+                    <td>50</td>
+                    <td>Coming Soon</td>
+                </tr>
+            </tbody>
+        </table>
+        <p class="note">* Limited availability. If tickets sell out before the end date, the next category will open automatically after. </p><br>
+      </div><!-- End Ticket Categories -->
 
       <!-- Benefits -->
       <div class="container benefits" data-aos="fade-up">
@@ -343,7 +336,7 @@
       <div class="container benefits" data-aos="fade-up">
         <h3>Benefits of Conference Pass:</h3>
         <ul class="benefits-list">
-            <li>Access to the event, including session talks, panel discussion, and lightning talks</li>
+            <li>Access to the event, including session talks, panel discussions, and lightning talks</li>
             <li>Booth visits and networking opportunities</li>
             <li>Exclusive swag (T-shirt, tote bag, stickers, etc.)</li>
             <li>Lunch, snacks, and coffee break</li>
