--- a/index.html
+++ b/index.html
@@ -586,12 +586,16 @@
 
     <!-- Agenda -->
     <section id="agenda" class="agenda section">
-
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <p>Agenda</p>
       </div><!-- End Section Title -->
       
+      <!-- Schedule Wrapper -->
+      <div class="container sessionize-schedule">
+        <script type="text/javascript" src="https://sessionize.com/api/v2/6oifi7zu/view/GridSmart"></script>
+      </div>
+
     </section><!-- /Agenda Section -->
 
     <!-- Venue -->
