--- a/index.html
+++ b/index.html
@@ -689,14 +689,16 @@
           <a href="https://drive.google.com/file/d/1W0GLh1Opt5zWZTOwJwBWcvfR0U3UsLUq/view?usp=drivesdk" class="btn btn-get-started" target="_blank">Support Us</a>
         </div>
       </div><!-- End Call for Sponsors -->
-
+      
       <!-- Platinum Sponsors -->
       <section id="platinum-sponsors" class="sponsor-category platinum-sponsors" data-aos="fade-up">
         <h3 class="sponsor-heading platinum-heading"><center>Platinum</center></h3>
         <div class="container">
-          <div class="row">
+          <div class="row justify-content-center">
             <div class="col-lg-6 col-md-6 d-flex justify-content-center">
-              <img src="assets/img/sponsor/aws.png" alt="Platinum Sponsor 1" class="img-fluid platinum-img">
+              <a href="https://aws.amazon.com" target="_blank">
+                <img src="assets/img/sponsor/aws.png" alt="Platinum Sponsor 1" class="img-fluid platinum-img mx-auto">
+              </a>
             </div>
           </div>
         </div>
@@ -706,9 +708,11 @@
       <section id="gold-sponsors" class="sponsor-category gold-sponsors" data-aos="fade-up">
         <h3 class="sponsor-heading gold-heading"><center>Gold</center></h3>
         <div class="container">
-          <div class="row">
+          <div class="row justify-content-center">
             <div class="col-lg-4 col-md-4 d-flex justify-content-center">
-              <img src="assets/img/sponsor/sponsor.png" alt="Gold Sponsor 1" class="img-fluid gold-img">
+              <a href="https://clickhouse.com" target="_blank">
+                <img src="assets/img/sponsor/clickhouse.png" alt="ClickHouse" class="img-fluid gold-img mx-auto">
+              </a>
             </div>
           </div>
         </div>
@@ -718,9 +722,11 @@
       <section id="silver-sponsors" class="sponsor-category silver-sponsors" data-aos="fade-up">
         <h3 class="sponsor-heading silver-heading"><center>Silver</center></h3>
         <div class="container">
-          <div class="row">
+          <div class="row justify-content-center">
             <div class="col-lg-3 col-md-3 col-sm-6 d-flex justify-content-center">
-              <img src="assets/img/sponsor/tidb.png" alt="TIDB PingCap" class="img-fluid silver-img">
+              <a href="https://pingcap.com" target="_blank">
+                <img src="assets/img/sponsor/tidb.png" alt="TIDB PingCap" class="img-fluid silver-img mx-auto">
+              </a>
             </div>
           </div>
         </div>
@@ -730,9 +736,11 @@
       <section id="bronze-sponsors" class="sponsor-category bronze-sponsors" data-aos="fade-up">
         <h3 class="sponsor-heading bronze-heading"><center>Bronze</center></h3>
         <div class="container">
-          <div class="row">
+          <div class="row justify-content-center">
             <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center">
-              <img src="assets/img/sponsor/jetbrains.png" alt="jetbrains" class="img-fluid bronze-img">
+              <a href="https://www.jetbrains.com" target="_blank">
+                <img src="assets/img/sponsor/jetbrains.png" alt="JetBrains" class="img-fluid bronze-img mx-auto">
+              </a>
             </div>
           </div>
         </div>
@@ -742,13 +750,16 @@
       <section id="venue-partner" class="sponsor-category venue-partner" data-aos="fade-up">
         <h3 class="sponsor-heading venue-heading"><center>Venue Partner</center></h3>
         <div class="container">
-          <div class="row">
+          <div class="row justify-content-center">
             <div class="col-lg-6 col-md-6 d-flex justify-content-center">
-              <img src="assets/img/sponsor/ccitui.png" alt="Venue Partner" class="img-fluid venue-img">
+              <a href="https://ccit.ui.ac.id" target="_blank">
+                <img src="assets/img/sponsor/ccitui.png" alt="Venue Partner" class="img-fluid venue-img mx-auto">
+              </a>
             </div>
           </div>
         </div>
       </section><!-- End Venue Partner -->
+
 
     </section><!-- End Sponsor Section -->
     <!-- Partner Komunitas -->
