--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     <td class="text-center">Conference Pass</td>
                     <td>Rp50,000</td>
                     <td class="text-center">50</td>
-                    <td class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Super Early Bird tickets">Register</a></td>
+                    <td>Closed</a></td>
                 </tr>
                 <!-- Early Bird -->
                 <tr>
@@ -298,7 +298,7 @@
                     <td>-</td>
                     <td>Rp75,000</td>
                     <td>50</td>
-                    <td>Coming Soon</td>
+                    <td class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Early Bird tickets">Register</a></td>
                 </tr>
                 <!-- Normal -->
                 <tr>
