--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-lg-6 col-md-6 d-flex justify-content-center">
-              <a href="https://ccit.ui.ac.id" target="_blank">
+              <a href="http://ccit.eng.ui.ac.id/" target="_blank">
                 <img src="assets/img/sponsor/ccitui.png" alt="Venue Partner" class="img-fluid venue-img mx-auto">
               </a>
             </div>
