--- a/index.html
+++ b/index.html
@@ -490,6 +490,24 @@
           <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
             <div class="speaker-member">
               <div class="member-img">
+                <img src="assets/img/speaker/bervianto-leo-pratama.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="https://instagram.com/berviantoleo"><i class="bi bi-instagram"></i></a>
+                  <a href="https://twitter.com/berviantoleo"><i class="bi bi-twitter-x"></i></a>
+                  <a href="https://www.linkedin.com/in/bervianto-leo-pratama/"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Bervianto Leo Pratama</h4>
+                <span>Software Engineer at Mitrais, AWS Community Builder, and HashiCorp Ambassador</span>
+              </div>
+            </div>
+          </div><!-- End Speaker Member 8 -->
+          
+
+          <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
+            <div class="speaker-member">
+              <div class="member-img">
                 <img src="assets/img/speaker/dwi-fahni-denni.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href="https://www.linkedin.com/in/dfdenni/"><i class="bi bi-linkedin"></i></a>
@@ -500,8 +518,23 @@
                 <span>Technology Architect at PT. Xapiens Teknologi Indonesia</span>
               </div>
             </div>
-          </div><!-- End Speaker Member 8 -->
+          </div><!-- End Speaker Member 9 -->
           
+          <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
+            <div class="speaker-member">
+              <div class="member-img">
+                <img src="assets/img/speaker/eryan-ariobowo.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="https://www.linkedin.com/in/eryan12/"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Eryan Ariobowo</h4>
+                <span>Solutions Architects at AWS</span>
+              </div>
+            </div>
+          </div><!-- End Speaker Member 9 -->
+
           <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
             <div class="speaker-member">
               <div class="member-img">
@@ -625,6 +658,21 @@
               <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
                 <div class="speaker-member">
                   <div class="member-img">
+                    <img src="assets/img/speaker/renaldy-gatan.jpg" class="img-fluid" alt="">
+                    <div class="social">
+                      <a href="https://www.linkedin.com/in/renaldygatan/"><i class="bi bi-linkedin"></i></a>
+                    </div>
+                  </div>
+                  <div class="member-info">
+                    <h4>Renaldy Gatan</h4>
+                    <span>Devops Engineer - Atmatech Global Informatika</span>
+                  </div>
+                </div>
+              </div><!-- End Speaker Member 16 -->
+
+              <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
+                <div class="speaker-member">
+                  <div class="member-img">
                     <img src="assets/img/speaker/rogers-setiady.jpg" class="img-fluid" alt="">
                     <div class="social">
                       <a href="https://www.linkedin.com/in/rogersdwiputra/"><i class="bi bi-linkedin"></i></a>
@@ -681,7 +729,7 @@
                 </div>
                 <div class="member-info">
                   <h4>Yusron Andrian</h4>
-                  <span>Technical Lead</span>
+                  <span>Technical Lead at McEasy</span>
                 </div>
               </div>
             </div><!-- End Speaker Member 19 -->
