--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
 
             </div>
           </div>
-          
+
           <div class="container">
             <div class="row gy-4">
     
@@ -859,7 +859,14 @@
                 <img src="assets/img/sponsor/clickhouse.png" alt="ClickHouse" class="img-fluid gold-img mx-auto">
               </a>
             </div>
+            <div class="col-lg-4 col-md-4 d-flex justify-content-center">
+              <a href="https://clickhouse.com" target="_blank">
+                <img src="assets/img/sponsor/pubnub.png" alt="ClickHouse" class="img-fluid gold-img mx-auto">
+              </a>
+            </div>
           </div>
+
+            </div>
         </div>
       </section><!-- End Gold Sponsors -->
 
