--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
               </a>
             </div>
             <div class="col-lg-4 col-md-4 d-flex justify-content-center">
-              <a href="https://clickhouse.com" target="_blank">
+              <a href="https://www.pubnub.com/" target="_blank">
                 <img src="assets/img/sponsor/pubnub.png" alt="ClickHouse" class="img-fluid gold-img mx-auto">
               </a>
             </div>
