--- a/index.html
+++ b/index.html
@@ -365,6 +365,40 @@
       <div class="container section-title" data-aos="fade-up">
         <p><span class="description-title">Speakers</span></p>
       </div><!-- End Section Title -->
+      <div class="container">
+        <div class="row gy-4">
+
+          <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
+            <div class="speaker-member">
+              <div class="member-img">
+                <img src="assets/img/speaker/rudi-suryadi.jpeg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="https://www.linkedin.com/in/rudisur/"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Rudi Suryadi</h4>
+                <span>Head of Solution Architect at AWS</span>
+              </div>
+            </div>
+          </div><!-- End Speaker Member 00 -->
+
+          <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
+            <div class="speaker-member">
+              <div class="member-img">
+                <img src="assets/img/speaker/shafraz-rahim.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="https://www.linkedin.com/in/aditya-kristianto/"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Shafraz Rahim</h4>
+                <span>Developer Community Lead - APAC & Japan, AWS</span>
+              </div>
+            </div>
+          </div><!-- End Speaker Member 01 -->
+        </div>
+      </div>
 
       <div class="container">
         <div class="row gy-4">
@@ -451,7 +485,7 @@
           </div><!-- End Speaker Member 5-->
         </div>
       </div>
-          
+         
       <div class="container">
         <div class="row gy-4">
 
