--- a/index.html
+++ b/index.html
@@ -525,14 +525,14 @@
           <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
             <div class="speaker-member">
               <div class="member-img">
-                <img src="assets/img/speaker/arsy-opraza-akma.jpg" class="img-fluid" alt="">
+                <img src="assets/img/speaker/azmi.jpeg" class="img-fluid" alt="">
                 <div class="social">
                   <a href="https://www.linkedin.com/in/azmifaizh/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
                 <h4>Azmi Faiz Habibi</h4>
-                <span>Project Manager - Core Initiative Studio</span>
+                <span>Project Manager - Core Initiative Studio & AWS User Group Leader Jakarta</span>
               </div>
             </div>
           </div><!-- End Speaker Member 8 -->
