--- a/index.html
+++ b/index.html
@@ -285,13 +285,12 @@
                 <tr>
                     <td rowspan="2" class="text-center">Early Bird</td>
                     <td class="text-center">All Access Pass</td>
-                    <td class="text-center">16 October - 08 November 2024</td>
+                    <td rowspan="2" class="text-center">16 October - 08 November 2024</td>
                     <td class="text-center">Rp100,000</td>
                     <td class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Early Bird tickets">Register</td>
                 </tr>
                 <tr>
                     <td>Conference Pass</td>
-                    <td>-</td>
                     <td>Rp75,000</td>
                     <td class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Early Bird tickets">Register</a></td>
                 </tr>
