--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <tr>
                     <td class="text-center">Conference Pass</td>
                     <td>Rp50,000</td>
-                    <td>Closed</a></td>
+                    <td>Sold Out</a></td>
                 </tr>
                 <!-- Early Bird -->
                 <tr>
