--- a/index.html
+++ b/index.html
@@ -935,6 +935,11 @@
                 <img src="assets/img/sponsor/jetbrains.png" alt="JetBrains" class="img-fluid bronze-img mx-auto">
               </a>
             </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center">
+              <a href="https://www.warpstream.com/" target="_blank">
+                <img src="assets/img/sponsor/warp.png" alt="warpstream" class="img-fluid bronze-img mx-auto">
+              </a>
+            </div>
           </div>
         </div>
       </section><!-- End Bronze Sponsors -->
@@ -944,6 +949,7 @@
         <h3 class="sponsor-heading venue-heading"><center>Venue Partner</center></h3>
         <div class="container">
           <div class="row justify-content-center">
+
             <div class="col-lg-6 col-md-6 d-flex justify-content-center">
               <a href="http://ccit.eng.ui.ac.id/" target="_blank">
                 <img src="assets/img/sponsor/ccitui.png" alt="Venue Partner" class="img-fluid venue-img mx-auto">
