--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
       <div class="hero-content">
           <img src="assets/img/acd.png" class="logo" title="AWS Community Day Indonesia">
           <h4>Uniting Developers and Community, Elevating Innovation with AWS</h4>
-          <h5>Jakarta, 23 November 2024</h5><br>
+          <h5>Jakarta, 23 November 2024</h5>
+          <h6>Faculty of Engineering, Universitas Indonesia</h6>
           <a href="#about" class="btn-get-started">Start</a>
       </div>
     </section>
@@ -821,7 +822,7 @@
                 <img src="assets/img/venue/venue-map.png" alt="Map of Event Location" class="map-img">
               </div>
               <div class="venue-address-container">
-                <p class="venue-address"><br>Universitas Indonesia, Jl. Prof. DR. Ir R Roosseno, Kukusan, Beji, Depok City, West Java 16425, Indonesia</p>
+                <p class="venue-address"><br>Faculty of Engineering Universitas Indonesia, Jl. Prof. DR. Ir R Roosseno, Kukusan, Beji, Depok City, West Java 16425, Indonesia</p>
                 <!-- Directions Button -->
                 <div class="btn-container">
                   <a href="https://maps.app.goo.gl/CpeR1uYzzeLsQ59t6" class="btn btn-map" target="_blank">
