--- a/index.html
+++ b/index.html
@@ -647,10 +647,9 @@
           <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
             <div class="speaker-member">
               <div class="member-img">
-                <img src="assets/img/speaker/ike-gabriel-yuson.jpg" class="img-fluid" alt="">
+                <img src="assets/img/speaker/indriyatno-banyumurti.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href="https://www.facebook.com/ikegabriel.yuson/"><i class="bi bi-facebook"></i></a>
-                  <a href="https://www.linkedin.com/in/iggyyuson/"><i class="bi bi-linkedin"></i></a>
+                  <a href="#"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -782,6 +781,21 @@
                   <div class="member-img">
                     <img src="assets/img/speaker/renaldy-gatan.jpg" class="img-fluid" alt="">
                     <div class="social">
+                      <a href="https://www.linkedin.com/in/rizafahmi/"><i class="bi bi-linkedin"></i></a>
+                    </div>
+                  </div>
+                  <div class="member-info">
+                    <h4>Riza Fahmi</h4>
+                    <span>Co-Founder at Hacktiv8 Indonesia & AWS Community Builder</span>
+                  </div>
+                </div>
+              </div><!-- End Speaker Member 23 -->
+
+              <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
+                <div class="speaker-member">
+                  <div class="member-img">
+                    <img src="assets/img/speaker/renaldy-gatan.jpg" class="img-fluid" alt="">
+                    <div class="social">
                       <a href="https://www.linkedin.com/in/renaldygatan/"><i class="bi bi-linkedin"></i></a>
                     </div>
                   </div>
@@ -790,7 +804,7 @@
                     <span>Devops Engineer - Atmatech Global Informatika</span>
                   </div>
                 </div>
-              </div><!-- End Speaker Member 23 -->
+              </div><!-- End Speaker Member 24 -->
 
               <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
                 <div class="speaker-member">
@@ -805,7 +819,13 @@
                     <span>Tech Lead at Campaign #ForABetterWorld & AWS Community Builder</span>
                   </div>
                 </div>
-              </div><!-- End Speaker Member 24 -->
+              </div><!-- End Speaker Member 25 -->
+
+            </div>
+          </div>
+
+          <div class="container">
+            <div class="row gy-4">
 
               <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
                 <div class="speaker-member">
@@ -820,14 +840,8 @@
                     <span>Senior DevOps Engineer at Ascendia Works</span>
                   </div>
                 </div>
-              </div><!-- End Speaker Member 25 -->
+              </div><!-- End Speaker Member 26 -->
 
-            </div>
-          </div>
-
-          <div class="container">
-            <div class="row gy-4">
-              
               <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
                 <div class="speaker-member">
                   <div class="member-img">
@@ -845,7 +859,7 @@
                     <span>DevOps Engineer @ Hosti</span>
                   </div>
                 </div>
-              </div><!-- End Speaker Member 26 -->
+              </div><!-- End Speaker Member 27 -->
 
               <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
                 <div class="speaker-member">
@@ -860,7 +874,7 @@
                     <span>Cloud Engineer at Btech</span>
                   </div>
                 </div>
-              </div><!-- End Speaker Member 27 -->
+              </div><!-- End Speaker Member 28 -->
 
             <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
               <div class="speaker-member">
@@ -875,7 +889,7 @@
                   <span>Technical Lead at McEasy</span>
                 </div>
               </div>
-            </div><!-- End Speaker Member 28 -->
+            </div><!-- End Speaker Member 29 -->
 
         </div>
       </div>
