--- a/index.html
+++ b/index.html
@@ -1116,6 +1116,11 @@
                   <img src="assets/img/community/nenggala.png" alt="PT Nenggala Kreatif Indonesia" class="img-fluid community-img">
                 </a>
               </div>
+              <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center align-items-center">
+                <a href="#" target="_blank">
+                  <img src="assets/img/community/CloudDatzen-dark.png" alt="CloudDatzen" class="img-fluid community-img">
+                </a>
+              </div>
             </div>
           </div><!-- End Community Partners -->
         </div><!-- End Centering Wrapper -->
