--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
               <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
                 <div class="speaker-member">
                   <div class="member-img">
-                    <img src="assets/img/speaker/renaldy-gatan.jpg" class="img-fluid" alt="">
+                    <img src="assets/img/speaker/riza.png" class="img-fluid" alt="">
                     <div class="social">
                       <a href="https://www.linkedin.com/in/rizafahmi/"><i class="bi bi-linkedin"></i></a>
                     </div>
