--- a/index.html
+++ b/index.html
@@ -288,12 +288,12 @@
                     <td class="text-center">All Access Pass</td>
                     <td rowspan="2" class="text-center">16 October - 08 November 2024</td>
                     <td class="text-center">Rp100,000</td>
-                    <td class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Early Bird tickets">Register</td>
+                    <td>Sold Out</a></td>
                 </tr>
                 <tr>
                     <td>Conference Pass</td>
                     <td>Rp75,000</td>
-                    <td class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Early Bird tickets">Register</a></td>
+                    <td>Sold Out</a></td>
                 </tr>
                 <!-- Normal -->
                 <tr>
@@ -301,13 +301,13 @@
                     <td>All Access Pass</td>
                     <td>-</td>
                     <td>Rp125,000</td>
-                    <td>Coming Soon</td>
+                    <td class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Normal tickets">Register</a></td>
                 </tr>
                 <tr>
                     <td>Conference Pass</td>
                     <td>-</td>
                     <td>Rp100,000</td>
-                    <td>Coming Soon</td>
+                    <td class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Normal tickets">Register</a></td>
                 </tr>
             </tbody>
         </table>
@@ -1044,7 +1044,6 @@
       <section id="bronze-sponsors" class="sponsor-category bronze-sponsors" data-aos="fade-up">
         <h3 class="sponsor-heading bronze-heading"><center>Bronze</center></h3>
         <div class="container">
-
           <div class="row justify-content-center">
             <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center">
               <a href="https://www.jetbrains.com" target="_blank">
@@ -1057,7 +1056,6 @@
               </a>
             </div>
           </div>
-          
         </div>
       </section><!-- End Bronze Sponsors -->
 
