--- a/index.html
+++ b/index.html
@@ -273,12 +273,13 @@
                 <tr>
                     <td rowspan="2" class="text-center">Super Early Bird</td>
                     <td class="text-center">All Access Pass</td>
-                    <td rowspan="2" class="text-center">4 October - 25 October 2024</td>
+                    <td>-</td>
                     <td>Rp75,000</td>
                     <td>Sold Out</a></td>
                 </tr>
                 <tr>
                     <td class="text-center">Conference Pass</td>
+                    <td>-</td>
                     <td>Rp50,000</td>
                     <td>Sold Out</a></td>
                 </tr>
@@ -298,14 +299,13 @@
                 <!-- Normal -->
                 <tr>
                     <td rowspan="2" class="text-center">Normal</td>
-                    <td>All Access Pass</td>
-                    <td>-</td>
+                    <td class="text-center">All Access Pass</td>
+                    <td rowspan="2" class="text-center">09 November - 29 November 2024</td>
                     <td>Rp125,000</td>
                     <td class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Normal tickets">Register</a></td>
                 </tr>
                 <tr>
-                    <td>Conference Pass</td>
-                    <td>-</td>
+                  <td class="text-center">Confereces Pass</td>
                     <td>Rp100,000</td>
                     <td class="text-center"><a href="https://join.awscommunity.id/event/acdjkt/" class="btn-action" aria-label="Register for Normal tickets">Register</a></td>
                 </tr>
